Clear the checkbox of "Select All" after deleting all the rows in the page

--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/ngbd-modal-workflow-executions/ngbd-modal-workflow-executions.component.html
@@ -107,7 +107,7 @@
             <tr>
               <th
                 (nzCheckedChange)="onAllChecked($event)"
-                [(nzChecked)]="checked"
+                [nzChecked]="isAllExecutionsSelected()"
                 [ngStyle]="{'width': customColumnWidth['']}"></th>
               <th
                 *ngFor="let column of executionsTableHeaders; let i=index"
