--- a/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
+++ b/core/new-gui/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
@@ -56,7 +56,7 @@
   </li>
   <li
     nz-menu-item
-    *ngIf="(operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
+    *ngIf="(! operatorMenu.isToViewResult && operatorMenu.isViewResultClickable)"
     (click)="operatorMenu.viewResultHighlightedOperators()">
     <span
       nz-icon
@@ -66,7 +66,7 @@
   </li>
   <li
     nz-menu-item
-    *ngIf="(! operatorMenu.isCacheOperator && operatorMenu.isCacheOperatorClickable)"
+    *ngIf="(operatorMenu.isToViewResult && operatorMenu.isViewResultClickable)"
     (click)="operatorMenu.viewResultHighlightedOperators()">
     <span
       nz-icon
