--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -37,7 +37,7 @@
       <label>
         <nz-avatar
           *ngIf="workflowId"
-          [nzText]="workflowId?.toString() || ''"></nz-avatar>
+          [nzText]="workflowId.toString() || ''"></nz-avatar>
         <input
           *ngIf="!displayParticularWorkflowVersion"
           (change)="onWorkflowNameChange()"
@@ -294,8 +294,8 @@
             nzType="stop"></i>
         </button>
         <button
-          *ngIf="(operatorMenu.isToViewResult || ! operatorMenu.isViewResultClickable)"
-          [disabled]="! operatorMenu.isViewResultClickable"
+          *ngIf="(operatorMenu.isToViewResult || ! operatorMenu.isToViewResultClickable)"
+          [disabled]="! operatorMenu.isToViewResultClickable"
           (click)="operatorMenu.viewResultHighlightedOperators()"
           nz-button
           title="view result">
@@ -305,8 +305,8 @@
             nzTheme="outline"></i>
         </button>
         <button
-          *ngIf="(! operatorMenu.isToViewResult && operatorMenu.isViewResultClickable)"
-          [disabled]="! operatorMenu.isViewResultClickable"
+          *ngIf="(! operatorMenu.isToViewResult && operatorMenu.isToViewResultClickable)"
+          [disabled]="! operatorMenu.isToViewResultClickable"
           (click)="operatorMenu.viewResultHighlightedOperators()"
           nz-button
           title="click to remove view result">
