--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
@@ -4,6 +4,13 @@
     <nz-button-group
       class="utility-button-group"
       ngbDropdown>
+      <label
+        nz-checkbox
+        [(ngModel)]="areAllChecked"
+        (ngModelChange)="onAllCheckedBoxChange()"
+        [nz-tooltip]="allCheckedBoxLabel"
+        nzTooltipPlacement="bottom">
+      </label>
       <texera-sort-button (sortMethodChange)="sortMethod = $event; search()"></texera-sort-button>
       <button
         (click)="onClickCreateNewWorkflowFromDashboard()"
@@ -16,19 +23,6 @@
           nz-icon
           nzTheme="outline"
           nzType="file-add"></i>
-      </button>
-      <button
-        [disabled]="!zipDownloadButtonEnabled"
-        (click)="onClickOpenDownloadZip()"
-        nz-button
-        title="Download added workflow as a ZIP file"
-        nz-tooltip="Download added workflow as a ZIP file"
-        nzTooltipPlacement="bottom"
-        type="button">
-        <i
-          nz-icon
-          nzType="cloud-download"
-          nzTheme="outline"></i>
       </button>
       <nz-upload [nzBeforeUpload]="onClickUploadExistingWorkflowFromLocal">
         <button
@@ -43,6 +37,46 @@
             nzTheme="outline"></i>
         </button>
       </nz-upload>
+      <button
+        *ngIf="multiWorkflowsOperationButtonEnabled()"
+        (click)="onClickOpenDownloadZip()"
+        nz-button
+        title="Download added workflow as a ZIP file"
+        nz-tooltip="Download added workflow as a ZIP file"
+        nzTooltipPlacement="bottom"
+        type="button">
+        <i
+          nz-icon
+          nzType="cloud-download"
+          nzTheme="outline"></i>
+      </button>
+
+      <button
+        *ngIf="multiWorkflowsOperationButtonEnabled()"
+        (click)="onClickDuplicateSelectedWorkflows()"
+        nz-button
+        nz-tooltip="Duplicate selected workflows"
+        nzTooltipPlacement="bottom"
+        type="button">
+        <i
+          nz-icon
+          nzTheme="outline"
+          nzType="copy"></i>
+      </button>
+
+      <button
+        *ngIf="multiWorkflowsOperationButtonEnabled()"
+        nz-popconfirm
+        nzPopconfirmTitle="Confirm to delete selected workflows."
+        nz-button
+        nz-tooltip="Delete selected workflows"
+        (nzOnConfirm)="handleConfirmDeleteSelectedWorkflows()"
+        nzTooltipPlacement="bottom">
+        <i
+          nz-icon
+          nzTheme="outline"
+          nzType="delete"></i>
+      </button>
 
       <button
         *ngIf="pid !== undefined"
