fix unit tests error

--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
@@ -4,13 +4,14 @@
     <nz-button-group
       class="utility-button-group"
       ngbDropdown>
-      <label
+      <input
+        type="checkbox"
         nz-checkbox
-        [(ngModel)]="areAllChecked"
-        (ngModelChange)="onAllCheckedBoxChange()"
+        [checked]="areAllChecked"
+        (change)="onAllCheckedBoxChange()"
         [nz-tooltip]="allCheckedBoxLabel"
-        nzTooltipPlacement="bottom">
-      </label>
+        nzTooltipPlacement="bottom"
+      />
       <texera-sort-button (sortMethodChange)="sortMethod = $event; search()"></texera-sort-button>
       <button
         (click)="onClickCreateNewWorkflowFromDashboard()"
