--- a/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-workflow/user-workflow.component.html
@@ -4,14 +4,12 @@
     <nz-button-group
       class="utility-button-group"
       ngbDropdown>
-      <input
-        type="checkbox"
+      <label
         nz-checkbox
-        [checked]="areAllChecked"
-        (change)="onAllCheckedBoxChange()"
+        (change)="onAllCheckedBoxChange($event)"
         [nz-tooltip]="allCheckedBoxLabel"
-        nzTooltipPlacement="bottom"
-      />
+        nzTooltipPlacement="bottom">
+      </label>
       <texera-sort-button (sortMethodChange)="sortMethod = $event; search()"></texera-sort-button>
       <button
         (click)="onClickCreateNewWorkflowFromDashboard()"
