--- a/core/new-gui/src/app/workspace/component/result-panel/visualization-frame/visualization-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/result-panel/visualization-frame/visualization-frame.component.html
@@ -7,7 +7,8 @@
 <ng-template #modalTitle>
   <div
     cdkDrag
-    cdkDragRootElement=".ant-modal-content">
+    cdkDragRootElement=".ant-modal-content"
+    cdkDragHandle>
     <div style="display: flex; align-items: center; justify-content: space-between">
       <span>Visualization</span>
       <span
