--- a/core/new-gui/src/app/dashboard/admin/component/gmail/gmail.component.html
+++ b/core/new-gui/src/app/dashboard/admin/component/gmail/gmail.component.html
@@ -28,7 +28,7 @@
           nzMessage="Not Authorized!"></nz-alert>
       </ng-template>
       <button
-        (click)="revoke()"
+        (click)="revokeAuth()"
         nz-button
         nzType="primary"
         style="width: 100%; margin-top: 10px"
@@ -54,7 +54,7 @@
       <form
         nz-form
         [formGroup]="validateForm"
-        (ngSubmit)="sendEmail()">
+        (ngSubmit)="sendTestEmail()">
         <nz-form-item>
           <nz-form-label
             [nzSpan]="6"
