change Operator Cache to Result Cache

--- a/core/new-gui/src/app/dashboard/user/component/user-quota/user-quota.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/user-quota/user-quota.component.html
@@ -65,12 +65,12 @@
             <p class="info-content">{{ convertFileSize(this.totalFileSize) }}</p>
           </div>
           <div class="info-box">
-            <h2 class="info-heading">Total Operator Cache Size</h2>
+            <h2 class="info-heading">Total Result Cache Size</h2>
             <p class="info-content">{{ convertFileSize(this.totalMongoSize) }}</p>
           </div>
         </div>
       </nz-tab>
-      <nz-tab nzTitle="Operator Cache">
+      <nz-tab nzTitle="Result Cache">
         <nz-collapse>
           <nz-collapse-panel
             *ngFor="let workflow of mongodbWorkflows"
