--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -105,6 +105,17 @@
           </li>
         </ul>
       </li>
+      <li
+      nz-menu-item
+      nz-tooltip="Open the forum commnuity"
+      nzMatchRouter="true"
+      nzTooltipPlacement="right"
+      routerLink="/dashboard/flarum">
+      <span
+        nz-icon
+        nzType="comment"></span>
+      <span>Forum</span>
+      </li>
     </ul>
   </nz-sider>
   <nz-layout>
