--- a/core/new-gui/src/app/dashboard/user/component/flarum/flarum.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/flarum/flarum.component.html
@@ -2,5 +2,7 @@
   <nz-card class="section">
     <h2>Discussion</h2>
   </nz-card>
-    <iframe class="flarum-iframe" [src]="flarumUrl"></iframe>
+  <iframe
+    class="flarum-iframe"
+    [src]="flarumUrl"></iframe>
 </div>
