--- a/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
+++ b/core/new-gui/src/app/dashboard/user/component/dashboard.component.html
@@ -68,7 +68,6 @@
           nzType="file-search"></span>
         <span>Search</span>
       </li>
-
       <li
         nz-menu-item
         nz-tooltip="Quota information"
@@ -79,6 +78,17 @@
           nz-icon
           nzType="dashboard"></span>
         <span>Quota</span>
+      </li>
+      <li
+        nz-menu-item
+        nz-tooltip="Open the discussion forum"
+        nzMatchRouter="true"
+        nzTooltipPlacement="right"
+        routerLink="/dashboard/discussion">
+        <span
+          nz-icon
+          nzType="comment"></span>
+        <span>Forum</span>
       </li>
 
       <li
@@ -127,17 +137,6 @@
             <span>Gmail</span>
           </li>
         </ul>
-      </li>
-      <li
-        nz-menu-item
-        nz-tooltip="Open the forum commnuity"
-        nzMatchRouter="true"
-        nzTooltipPlacement="right"
-        routerLink="/dashboard/flarum">
-        <span
-          nz-icon
-          nzType="comment"></span>
-        <span>Forum</span>
       </li>
     </ul>
   </nz-sider>
