--- a/core/new-gui/src/app/workspace/component/left-panel/versions-display/versions-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/versions-display/versions-frame.component.html
@@ -1,3 +1,4 @@
+<script src="../../../../dashboard/service/workflow-version/workflow-version.service.ts"></script>
 <div>
   <nz-table *ngIf="versionsList" [nzData]="versionsList">
     <thead>
