refactor versions frame

--- a/core/new-gui/src/app/workspace/component/left-panel/versions-frame/versions-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/versions-frame/versions-frame.component.html
@@ -1,20 +1,27 @@
-<div>
-  <nz-table *ngIf="versionsList" [nzData]="versionsList">
+<div class="versions-frame" >
+
+  <nz-table nzSize="small"
+            [nzSimple]=true
+            [nzFrontPagination]="false"
+            nzTableLayout="auto"
+
+            *ngIf="versionsList" [nzData]="versionsList" id="versions-list">
     <thead>
-      <tr>
-        <th *ngFor="let column of versionTableHeaders">{{column}}</th>
-      </tr>
+    <tr>
+      <th *ngFor="let column of versionTableHeaders">{{column}}</th>
+    </tr>
     </thead>
     <tbody>
-      <ng-container *ngFor="let row of versionsList; let i=index; let l=count;">
-        <tr *ngIf="(!row.importance && row.expand) || row.importance">
-          <td [nzShowExpand]="row.importance" [(nzExpand)]="row.expand" (nzExpandChange)="collapse(i, $event)">
-            {{(l-i)}}
-          </td>
-          <td nzEllipsis (click)="getVersion(row.vId)">{{row.creationTime | date:'MM/dd/yyyy HH:mm:ss zzz'}}</td>
-        </tr>
-      </ng-container>
+    <ng-container *ngFor="let row of versionsList; let i=index; let l=count;">
+      <tr  *ngIf="(!row.importance && row.expand) || row.importance">
+        <td nzAlign="right" [nzShowExpand]="row.importance" [(nzExpand)]="row.expand" (nzExpandChange)="collapse(i, $event)">
+          {{(l - i)}}
+        </td>
+        <td nzEllipsis (click)="getVersion(row.vId)">{{row.creationTime | date:'MM/dd/YY HH:mm:ss'}}</td>
+      </tr>
+    </ng-container>
     </tbody>
   </nz-table>
-  <button nz-button (click)="workflowVersionService.closeFrame()"> close versions </button>
+  <button nz-button (click)="workflowVersionService.closeFrame()"> close versions</button>
+
 </div>
