--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -1,4 +1,3 @@
 <ndc-dynamic
-    [ndcDynamicComponent]="frameComponentConfig?.component"
-    [ndcDynamicInputs]="frameComponentConfig?.componentInputs ?? {}"
-></ndc-dynamic>
+  [ndcDynamicComponent]="frameComponentConfig?.component"
+  [ndcDynamicInputs]="frameComponentConfig?.componentInputs ?? {}"></ndc-dynamic>
