--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -7,7 +7,7 @@
 		'user-system-enabled': this.userSystemEnabled
 	}">
   <texera-navigation
-    class="texera-navigation-grid-container grid-container"
+    class="texera-navigation-grid-container"
     [pid]="pid">
   </texera-navigation>
 
