--- a/core/new-gui/src/app/workspace/component/menu/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/menu/navigation.component.html
@@ -3,7 +3,7 @@
     <a href="/">
       <img
         alt="Texera"
-        src="assets/logos/full_logo_small.png" />
+        src="../../../../assets/logos/full_logo_small.png" />
     </a>
   </div>
   <div id="nav-content">
