--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -14,6 +14,7 @@
   --header-height: 40px;
   --resultbar-height: 25px;
   --result-panel-height: 280px;
+  min-width: 630px;
 
   &.user-system-enabled {
     --header-height: 76px;
