--- a/core/new-gui/src/app/workspace/component/result-panel/console-frame/console-frame.component.html
+++ b/core/new-gui/src/app/workspace/component/result-panel/console-frame/console-frame.component.html
@@ -115,7 +115,7 @@
             </button>
 
             <button
-              (click)="onClickRetry()"
+              (click)="onClickRetryTuples()"
               *ngIf="entry.msgType.name==='ERROR'"
               [disabled]="!isLast"
               nzSize="small"
