--- a/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/left-panel.component.html
@@ -1,3 +1,1 @@
-<ndc-dynamic
-  [ndcDynamicComponent]="frameComponentConfig?.component"
-  [ndcDynamicInputs]="frameComponentConfig?.componentInputs ?? {}"></ndc-dynamic>
+<ng-container *ngComponentOutlet="currentComponent;"></ng-container>
