--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-label/operator-label.component.html
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-label/operator-label.component.html
@@ -1,16 +1,11 @@
 <div
-  [ngClass]="{
-		'texera-operator-label-container': true,
-		'disable-drag-drop': !draggable
-	}">
-  <div
-    (mousedown)="mouseDown()"
-    (mouseleave)="mouseLeave()"
-    (mouseup)="mouseUp()"
-    [attr.id]="operatorLabelID"
-    [ngClass]="{ 'shake-animation': animate === 'reject' }"
-    class="texera-operator-label-body"
-    title="{{ operator?.additionalMetadata?.operatorDescription }}">
-    <span class="text"> {{ operator?.additionalMetadata?.userFriendlyName }} </span>
-  </div>
+  (mousedown)="mouseDown()"
+  (mouseleave)="mouseLeave()"
+  (mouseup)="mouseUp()"
+  [attr.id]="operatorLabelID"
+  [ngClass]="{ 'shake-animation': animate === 'reject',
+               'disable-drag-drop': !draggable}"
+  class="operator-label"
+  title="{{ operator?.additionalMetadata?.operatorDescription }}">
+  <span class="text"> {{ operator?.additionalMetadata?.userFriendlyName }} </span>
 </div>
