--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-label/operator-label.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-label/operator-label.component.scss
@@ -1,34 +1,35 @@
-.texera-operator-label-container {
+texera-operator-label {
   display: contents;
+}
+
+.disable-drag-drop {
   > .texera-operator-label-body {
-    width: 100%;
-    height: calc(100% - 1px);
-    padding-left: 10%;
-    display: flex;
-    align-content: center;
-    border: 1px solid;
-    border-radius: 3px;
-    border-color: rgba(0, 0, 0, 0);
-    transition: border-color 0.3s, color 0.3s;
-    overflow: hidden;
+    color: rgb(151, 151, 151);
     &:hover {
-      border-color: rgba(64, 169, 255, 1);
-      > .text {
-        transform: translateX(10px);
-      }
-    }
-    > .text {
-      user-select: none;
-      transition: transform 0.5s 0.1s;
+      border-color: rgb(217, 217, 217);
     }
   }
-  &.disable-drag-drop {
-    > .texera-operator-label-body {
-      color: rgb(151, 151, 151);
-      &:hover {
-        border-color: rgb(217, 217, 217);
-      }
+}
+
+.operator-label{
+  width: 100%;
+  height: calc(100% - 1px);
+  padding-left: 10%;
+  display: flex;
+  align-content: center;
+  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  transition: border-color 0.3s, color 0.3s;
+  overflow: hidden;
+  &:hover {
+    border-color: rgba(64, 169, 255, 1);
+    > .text {
+      transform: translateX(10px);
     }
+  }
+  > .text {
+    user-select: none;
+    transition: transform 0.5s 0.1s;
   }
 }
 
