--- a/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-menu.component.scss
+++ b/core/new-gui/src/app/workspace/component/left-panel/operator-menu-frame/operator-menu.component.scss
@@ -1,26 +1,17 @@
 #operator-menu-container {
   height: 100%;
-  width: 200px;
-  display: flex;
-  flex-direction: column;
+  user-select: none;
+  overflow-y: auto;
 }
 
 #search-box {
-  padding: 10px;
+  padding: 5px;
   border-bottom: 1px solid #e0e0e0;
 }
 
-#operator-menu {
-  flex-grow: 1;
-  overflow-y: auto;
-  .texera-workspace-operator-panel-subgroup {
-    background-color: #fff;
-    user-select: none;
-    .texera-workspace-operator-panel-subgroup-menu {
-      border: none;
-      .texera-operator-label {
-        padding: unset;
-      }
-    }
-  }
+.operator-submenu-title {
+  background-color: #fff;
+}
+.operator-submenu {
+  border: none;
 }
