--- a/core/new-gui/src/app/workspace/component/workspace.component.html
+++ b/core/new-gui/src/app/workspace/component/workspace.component.html
@@ -1,3 +1,4 @@
+<texera-left-panel> </texera-left-panel>
 <div
   [ngClass]="{
 		'grid-container': true,
@@ -11,7 +12,7 @@
     [pid]="pid">
   </texera-menu>
 
-  <texera-left-panel class="texera-operator-panel-grid-container grid-container"> </texera-left-panel>
+
 
   <div class="texera-property-editor-grid-container grid-container">
     <div class="texera-right-side-bar-split-editor-minimap">
